# first-bevy-game

./: Cargo.toml  README.md
src/: main.rs
