[package]
name = "first-bevy-game"
description = "My first Bevy game"
version = "0.0.1"
keywords = ["gamedev", "game", "bevy"]
categories = ["game-engines"]
authors = ["BritishWerewolf <britishwerewolfdev@gmail.com>"]
edition = "2021"
homepage = "https://github.com/BritishWerewolf/first-bevy-game"
repository = "https://github.com/BritishWerewolf/first-bevy-game"
documentation = "https://github.com/BritishWerewolf/first-bevy-game"
license = "MIT"
readme = "README.md"

[dependencies]
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.24.0"
bevy_enum_filter = "0.3.0"
leafwing-input-manager = "0.13.3"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
